--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -82,6 +82,30 @@ groups: (
 	inherit: ( /*empty list*/ )
 	commands: {
 		/* no commands by default */
+		commands: true
+		help: true
+		rates: true
+		uptime: true
+		showdelay: true
+		exp: true
+		mobinfo: true
+		iteminfo: true
+		whodrops: true
+		time: true
+		jailtime: true
+		hominfo: true
+		homstats: true
+		showexp: true
+		showzeny: true
+		/* feature commands */
+		refresh: true
+		noask: true
+		noks: true
+		autoloot: true
+		alootid: true
+		autotrade: true
+		request: true
+		channel: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
@@ -97,34 +121,11 @@ groups: (
 	level: 0
 	commands: {
 		/* informational commands */
-		commands: true
 		charcommands: true
-		help: true
-		rates: true
-		uptime: true
-		showdelay: true
-		exp: true
-		mobinfo: true
-		iteminfo: true
-		whodrops: true
-		time: true
-		jailtime: true
-		hominfo: true
-		homstats: true
-		showexp: true
-		showzeny: true
 		whereis: true
 		/* feature commands */
-		refresh: true
-		noask: true
-		noks: true
-		autoloot: true
-		alootid: true
-		autotrade: true
-		request: true
 		go: true
 		breakguild: true
-		channel: true
 	}
 	permissions: {
 	}
