--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -6,16 +6,20 @@
 
 //npc: npc/location/to/script.txt
 
+npc: npc/custom/admin/warper.txt
+npc: npc/custom/admin/healer.txt
+npc: npc/custom/admin/allinone.txt
+
 // ----------------------- Basic Scripts -----------------------
-npc: npc/custom/warper.txt
-npc: npc/custom/jobmaster.txt
+//npc: npc/custom/warper.txt
+//npc: npc/custom/jobmaster.txt
 //npc: npc/custom/platinum_skills.txt
-npc: npc/custom/healer.txt
-npc: npc/custom/breeder.txt
-npc: npc/custom/itemmall.txt
-npc: npc/custom/stylist.txt
-npc: npc/custom/resetnpc.txt
-npc: npc/custom/card_remover.txt
+//npc: npc/custom/healer.txt
+//npc: npc/custom/breeder.txt
+//npc: npc/custom/itemmall.txt
+//npc: npc/custom/stylist.txt
+//npc: npc/custom/resetnpc.txt
+//npc: npc/custom/card_remover.txt
 //npc: npc/custom/item_signer.txt
 //npc: npc/custom/woe_controller.txt
 
