Added Build Manager in the All in One NPC Added Floating Rates Added Repair and Identify in the Healer NPC

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -9,6 +9,7 @@
 npc: npc/custom/admin/warper.txt
 npc: npc/custom/admin/healer.txt
 npc: npc/custom/admin/allinone.txt
+npc: npc/custom/admin/floating_rates.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
