Added PVP System(Ghost's Script) with mapflags

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -10,6 +10,9 @@ npc: npc/custom/admin/warper.txt
 npc: npc/custom/admin/healer.txt
 npc: npc/custom/admin/allinone.txt
 npc: npc/custom/admin/floating_rates.txt
+npc: npc/custom/admin/pvp.txt
+npc: npc/custom/admin/pvpwarper.txt
+npc: npc/custom/admin/custom_mapflag.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
