Added Mall/Vending Map and NPC Added Mall/Vending to Warper

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -13,6 +13,7 @@ npc: npc/custom/admin/floating_rates.txt
 npc: npc/custom/admin/pvp.txt
 npc: npc/custom/admin/pvpwarper.txt
 npc: npc/custom/admin/custom_mapflag.txt
+npc: npc/custom/admin/mallnpc.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
