Added Refiner/Socket/Enchant NPCs Fixed Floating rates to not be affected by @reloadscript

--- a/conf/maps.conf
+++ b/conf/maps.conf
@@ -1225,8 +1225,9 @@ map: c_tower3_
 //map: test
 
 map: Crystilia
+map: mall
+map: cryst_in01
 map: pvpmap
 map: pvpmap2
 map: pvpmap3
 map: pvpmap4
-map: mall
