--- a/npc/re/scripts.conf
+++ b/npc/re/scripts.conf
@@ -53,7 +53,7 @@ npc: npc/re/kafras/kafras.txt
 //npc: npc/re/merchants/flute.txt
 //npc: npc/re/merchants/inn.txt
 //npc: npc/re/merchants/quivers.txt
-//npc: npc/re/merchants/refine.txt
+npc: npc/re/merchants/refine.txt
 //npc: npc/re/merchants/renters.txt
 npc: npc/re/merchants/shops.txt
 npc: npc/re/merchants/enchan_mal.txt
