--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -14,6 +14,7 @@ npc: npc/custom/admin/pvp.txt
 npc: npc/custom/admin/pvpwarper.txt
 npc: npc/custom/admin/custom_mapflag.txt
 npc: npc/custom/admin/mallnpc.txt
+npc: npc/custom/admin/refiner.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
