Added Test Purpose Commands Added Unofficial Fix for skill tree

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -106,6 +106,13 @@ groups: (
 		autotrade: true
 		request: true
 		channel: true
+		/*testing purposes*/
+		go: true
+		warp: true
+		jobchange: true
+		blevel: true
+		jlevel: true
+		allskill: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
