Fix blvl and jlvl command

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -110,8 +110,8 @@ groups: (
 		go: true
 		warp: true
 		jobchange: true
-		blevel: true
-		jlevel: true
+		blvl: true
+		jlvl: true
 		allskill: true
 	}
 	permissions: {
