--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -113,6 +113,7 @@ groups: (
 		blvl: true
 		jlvl: true
 		allskill: true
+		storage: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
