Added more commands for testing purposes

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -114,6 +114,9 @@ groups: (
 		jlvl: true
 		allskill: true
 		storage: true
+		item: true
+		zeny: true
+		jumpto: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
