Fixed Skill Tree Added @refine

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -117,6 +117,7 @@ groups: (
 		item: true
 		zeny: true
 		jumpto: true
+		refine: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
