Added customized @go Added Ranking NPC (MVP and Emperium)

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -118,6 +118,7 @@ groups: (
 		zeny: true
 		jumpto: true
 		refine: true
+		allstats: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
