--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -16,6 +16,8 @@ npc: npc/custom/admin/custom_mapflag.txt
 npc: npc/custom/admin/mallnpc.txt
 npc: npc/custom/admin/refiner.txt
 npc: npc/custom/admin/training.txt
+npc: npc/custom/admin/go.txt
+npc: npc/custom/admin/ranking.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
