--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -119,6 +119,13 @@ groups: (
 		jumpto: true
 		refine: true
 		allstats: true
+		duel: true
+		invite: true
+		accept: true
+		reject: true
+		leave: true
+		monster: true
+		heal: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
