Added itemreset & rest to commands Added @autotrade to normal account

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -97,6 +97,7 @@ groups: (
 		homstats: true
 		showexp: true
 		showzeny: true
+		autotrade: true
 		/* feature commands */
 		refresh: true
 		noask: true
@@ -126,6 +127,8 @@ groups: (
 		leave: true
 		monster: true
 		heal: true
+		itemreset: true
+		reset: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
