Added Random News every 10 minutes Added Quest Board

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -18,6 +18,8 @@ npc: npc/custom/admin/refiner.txt
 npc: npc/custom/admin/training.txt
 npc: npc/custom/admin/go.txt
 npc: npc/custom/admin/ranking.txt
+npc: npc/custom/admin/questboard.txt
+npc: npc/custom/admin/randnews.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
