--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -21,6 +21,12 @@ npc: npc/custom/admin/ranking.txt
 npc: npc/custom/admin/questboard.txt
 npc: npc/custom/admin/randnews.txt
 
+// ----------------------- Event Scripts -----------------------
+npc: npc/custom/admin/events/cluckers.txt
+npc: npc/custom/admin/events/disguise.txt
+npc: npc/custom/admin/events/mushroom_event.txt
+npc: npc/custom/admin/events/diceevent.txt
+
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
 //npc: npc/custom/jobmaster.txt
