Added Itemizer NPC Added Coin Exchanger in the All in One NPC Added itemizer.sql into exhilarate-ro.sql

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -20,6 +20,7 @@ npc: npc/custom/admin/go.txt
 npc: npc/custom/admin/ranking.txt
 npc: npc/custom/admin/questboard.txt
 npc: npc/custom/admin/randnews.txt
+npc: npc/custom/admin/itemizer.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
