--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -129,6 +129,8 @@ groups: (
 		heal: true
 		itemreset: true
 		reset: true
+		raisemap: true
+		killmonster: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
