Fix PVP Ranking Script Added Jumper Event Added WOE Control Script by Euphy

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -21,12 +21,14 @@ npc: npc/custom/admin/ranking.txt
 npc: npc/custom/admin/questboard.txt
 npc: npc/custom/admin/randnews.txt
 npc: npc/custom/admin/itemizer.txt
+npc: npc/custom/admin/woe_controller.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
 npc: npc/custom/admin/events/disguise.txt
 npc: npc/custom/admin/events/mushroom_event.txt
 npc: npc/custom/admin/events/diceevent.txt
+npc: npc/custom/admin/events/jumper.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
