--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -131,6 +131,7 @@ groups: (
 		reset: true
 		raisemap: true
 		killmonster: true
+		guild: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
