Added GM Login commands and Name Implementation Added VIP System

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -22,6 +22,9 @@ npc: npc/custom/admin/questboard.txt
 npc: npc/custom/admin/randnews.txt
 npc: npc/custom/admin/itemizer.txt
 npc: npc/custom/admin/woe_controller.txt
+npc: npc/custom/admin/vip.txt
+npc: npc/custom/admin/gmname.txt
+npc: npc/custom/admin/gmlogin.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
