Fixed setquest in training room Removed unknown items in the vip Used normal commands Added Map flag for the training area

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -107,9 +107,16 @@ groups: (
 		autotrade: true
 		request: true
 		channel: true
-		/*testing purposes*/
 		go: true
-		warp: true
+		duel: true
+		invite: true
+		accept: true
+		reject: true
+		leave: true
+		whereis: true
+		storage: true
+		/*testing purposes*/
+		/*warp: true
 		jobchange: true
 		blvl: true
 		jlvl: true
@@ -131,7 +138,7 @@ groups: (
 		reset: true
 		raisemap: true
 		killmonster: true
-		guild: true
+		guild: true*/
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
