Added SQL Quest Added Daily Reward NPC by Stolao and adopted to fit for the VIP System Fixed the MOTD Decreased Max ASPD from 196 - 193

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -25,6 +25,8 @@ npc: npc/custom/admin/woe_controller.txt
 npc: npc/custom/admin/vip.txt
 npc: npc/custom/admin/gmname.txt
 npc: npc/custom/admin/gmlogin.txt
+npc: npc/custom/admin/DailyReward.txt
+npc: npc/custom/admin/sqlquest.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
