Added Voting Shop Added Vote Points -> Coins in the coin exchanger Added vote coin

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -27,6 +27,7 @@ npc: npc/custom/admin/gmname.txt
 npc: npc/custom/admin/gmlogin.txt
 npc: npc/custom/admin/DailyReward.txt
 npc: npc/custom/admin/sqlquest.txt
+npc: npc/custom/admin/v4pshop.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
