Added Premium Items (Fly Wing, Fish Slice, AFM, Bgum, Green Potion, Life Insurance) -Item Delays -Item Stacks -Item Trade -Sc Config -Map Zone Added New Freebies (Account and Character Based) Fix Warper

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -11,8 +11,9 @@ npc: npc/custom/admin/healer.txt
 npc: npc/custom/admin/allinone.txt
 npc: npc/custom/admin/floating_rates.txt
 npc: npc/custom/admin/pvp.txt
-npc: npc/custom/admin/pvpwarper.txt
+//npc: npc/custom/admin/pvpwarper.txt
 npc: npc/custom/admin/custom_mapflag.txt
+npc: npc/custom/admin/custom_functions.txt
 npc: npc/custom/admin/mallnpc.txt
 npc: npc/custom/admin/refiner.txt
 npc: npc/custom/admin/training.txt
