--- a/db/re/map_zone_db.conf
+++ b/db/re/map_zone_db.conf
@@ -81,6 +81,9 @@ zones: (
 	
 	disabled_items: {
 		Greed_Scroll: true
+		ID30004: true	// Premium Fly Wing
+		ID30005: true	// Premium Fish Slice
+		ID30008: true	// Premium Green Potion
 	}
 },
 {
@@ -137,6 +140,9 @@ zones: (
 		Assumptio_5_Scroll: true
 		Greed_Scroll: true
 		Pty_Assumptio_Scroll: true
+		ID30004: true	// Premium Fly Wing
+		ID30005: true	// Premium Fish Slice
+		ID30008: true	// Premium Green Potion
 	}
 	/* 5 second duration increase on GvG */
 	/* knockback disabled */
@@ -197,6 +203,9 @@ zones: (
 	disabled_items: {
 		Assumptio_5_Scroll: true
 		Pty_Assumptio_Scroll: true
+		ID30004: true	// Premium Fly Wing
+		ID30005: true	// Premium Fish Slice
+		ID30008: true	// Premium Green Potion
 	}	
 	
 	/* knockback disabled */
