Added Quest Delay in the Questboard system Added Guild Point System in the WOE Fixed Premium Items Usage Relocated Loki (pvp ladder) Fixed MVP and EMP Ranking Incorporated EMP ranking and announcement with current WOE system Enabled WOE second edition Added Ladder System Added PvP Reset SQL
TO DO: Fix Group ID's for VIPS and their commands

--- a/db/re/map_zone_db.conf
+++ b/db/re/map_zone_db.conf
@@ -81,9 +81,9 @@ zones: (
 	
 	disabled_items: {
 		Greed_Scroll: true
-		ID30004: true	// Premium Fly Wing
-		ID30005: true	// Premium Fish Slice
-		ID30008: true	// Premium Green Potion
+		//ID30004: true	// Premium Fly Wing
+		//ID30005: true	// Premium Fish Slice
+		//ID30008: true	// Premium Green Potion
 	}
 },
 {
@@ -140,9 +140,9 @@ zones: (
 		Assumptio_5_Scroll: true
 		Greed_Scroll: true
 		Pty_Assumptio_Scroll: true
-		ID30004: true	// Premium Fly Wing
-		ID30005: true	// Premium Fish Slice
-		ID30008: true	// Premium Green Potion
+		//ID30004: true	// Premium Fly Wing
+		//ID30005: true	// Premium Fish Slice
+		//ID30008: true	// Premium Green Potion
 	}
 	/* 5 second duration increase on GvG */
 	/* knockback disabled */
@@ -203,9 +203,9 @@ zones: (
 	disabled_items: {
 		Assumptio_5_Scroll: true
 		Pty_Assumptio_Scroll: true
-		ID30004: true	// Premium Fly Wing
-		ID30005: true	// Premium Fish Slice
-		ID30008: true	// Premium Green Potion
+		//ID30004: true	// Premium Fly Wing
+		//ID30005: true	// Premium Fish Slice
+		//ID30008: true	// Premium Green Potion
 	}	
 	
 	/* knockback disabled */
