--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -29,6 +29,7 @@ npc: npc/custom/admin/gmlogin.txt
 npc: npc/custom/admin/DailyReward.txt
 npc: npc/custom/admin/sqlquest.txt
 npc: npc/custom/admin/v4pshop.txt
+npc: npc/custom/admin/ladder.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
