--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -77,7 +77,7 @@ http://www.hyperrealm.com/libconfig/libconfig_manual.html#Configuration-Files
 groups: (
 {
 	id: 0 /* group 0 is the default group for every new account */
-	name: "Player"
+	name: "Normal"
 	level: 0
 	inherit: ( /*empty list*/ )
 	commands: {
@@ -149,8 +149,8 @@ groups: (
 },
 {
 	id: 1
-	name: "Super Player"
-	inherit: ( "Player" ) /* can do everything Players can and more */
+	name: "VIP Silver"
+	inherit: ( "Normal" ) /* can do everything Players can and more */
 	level: 0
 	commands: {
 		/* informational commands */
@@ -165,8 +165,8 @@ groups: (
 },
 {
 	id: 2
-	name: "Support"
-	inherit: ( "Super Player" )
+	name: "VIP Gold"
+	inherit: ( "VIP Silver" )
 	level: 1
 	commands: {
 		version: true
@@ -190,8 +190,8 @@ groups: (
 },
 {
 	id: 3
-	name: "Script Manager"
-	inherit: ( "Support" )
+	name: "VIP Platinum"
+	inherit: ( "VIP Silver" )
 	level: 1
 	commands: {
 		tonpc: true
@@ -210,7 +210,7 @@ groups: (
 {
 	id: 4
 	name: "Event Manager"
-	inherit: ( "Support" )
+	inherit: ( )
 	level: 1
 	commands: {
 		monster: true
@@ -249,7 +249,7 @@ groups: (
 {
 	id: 10
 	name: "Law Enforcement"
-	inherit: ( "Support" )
+	inherit: ( )
 	level: 2
 	commands: {
 		hide: true
@@ -287,7 +287,7 @@ groups: (
 	id: 99
 	name: "Admin"
 	level: 99
-	inherit: ( "Support", "Law Enforcement" )
+	inherit: ( )
 	commands: {
 		/* not necessary due to all_commands: true */
 	}
