--- a/npc/scripts_guild.conf
+++ b/npc/scripts_guild.conf
@@ -38,18 +38,18 @@ npc: npc/guild/prtg_cas05.txt
 // - WoE SE time settings
 //npc: npc/guild2/agit_start_se.txt
 // - Guild NPC Template file
-//npc: npc/guild2/agit_main_se.txt
+npc: npc/guild2/agit_main_se.txt
 // - Town Flags
-//npc: npc/guild2/guild_flags.txt
+npc: npc/guild2/guild_flags.txt
 // - Arunafeltz
-//npc: npc/guild2/arug_cas01.txt
-//npc: npc/guild2/arug_cas02.txt
-//npc: npc/guild2/arug_cas03.txt
-//npc: npc/guild2/arug_cas04.txt
-//npc: npc/guild2/arug_cas05.txt
+npc: npc/guild2/arug_cas01.txt
+npc: npc/guild2/arug_cas02.txt
+npc: npc/guild2/arug_cas03.txt
+npc: npc/guild2/arug_cas04.txt
+npc: npc/guild2/arug_cas05.txt
 // - Schwaltzvalt
-//npc: npc/guild2/schg_cas01.txt
-//npc: npc/guild2/schg_cas02.txt
-//npc: npc/guild2/schg_cas03.txt
-//npc: npc/guild2/schg_cas04.txt
-//npc: npc/guild2/schg_cas05.txt
+npc: npc/guild2/schg_cas01.txt
+npc: npc/guild2/schg_cas02.txt
+npc: npc/guild2/schg_cas03.txt
+npc: npc/guild2/schg_cas04.txt
+npc: npc/guild2/schg_cas05.txt
