Fixed VIP and GM Commands Added Donation Items in the Cash shop Added Donation Claim Reworking Events Enabled Anti WPE

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -115,36 +115,17 @@ groups: (
 		leave: true
 		whereis: true
 		storage: true
-		/*testing purposes*/
-		/*warp: true
-		jobchange: true
-		blvl: true
-		jlvl: true
-		allskill: true
-		storage: true
-		item: true
-		zeny: true
-		jumpto: true
-		refine: true
-		allstats: true
-		duel: true
-		invite: true
-		accept: true
-		reject: true
-		leave: true
-		monster: true
-		heal: true
-		itemreset: true
-		reset: true
-		raisemap: true
-		killmonster: true
-		guild: true*/
+		channel: true
+		join: true
+		load: true
+		feelreset: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
 		trade or party */
 		can_trade: true
 		can_party: true
+		disable_commands_when_dead: true
 	}
 },
 {
@@ -153,12 +134,10 @@ groups: (
 	inherit: ( "Normal" ) /* can do everything Players can and more */
 	level: 0
 	commands: {
-		/* informational commands */
-		charcommands: true
-		whereis: true
-		/* feature commands */
-		go: true
-		breakguild: true
+		/* Additional commands */
+		font: true
+		pettalk: true
+		homtalk: true
 	}
 	permissions: {
 	}
@@ -167,60 +146,64 @@ groups: (
 	id: 2
 	name: "VIP Gold"
 	inherit: ( "VIP Silver" )
-	level: 1
+	level: 0
 	commands: {
-		version: true
+		/* Additional commands */
+		petrename: true
 		where: true
-		jumpto: true
-		who: true
-		who2: true
-		who3: true
-		whomap: true
-		whomap2: true
-		whomap3: true
-		users: true
-		broadcast: true
-		localbroadcast: true
+		me: true
 	}
-	log_commands: true
 	permissions: {
-		receive_requests: true
-		view_equipment: true
 	}
 },
 {
 	id: 3
 	name: "VIP Platinum"
-	inherit: ( "VIP Silver" )
-	level: 1
+	inherit: ( "VIP Gold" )
+	level: 0
 	commands: {
-		tonpc: true
-		hidenpc: true
-		shownpc: true
-		loadnpc: true
-		unloadnpc: true
-		npcmove: true
-		addwarp: true
+		/* Additional commands */
+		mobsearch: true
+		showmobs: true
 	}
-	log_commands: true
 	permissions: {
-		any_warp: true
+		show_bossmobs: true
 	}
 },
 {
-	id: 4
-	name: "Event Manager"
-	inherit: ( )
-	level: 1
+	id: 20
+	name: "Support GM"
+	inherit: ( "VIP Platinum" )
+	level: 20
 	commands: {
+		/* Additional commands */
+		item: true
+		zeny: true
+		refreshall: true
+		jumpto: true
+	}
+	log_commands: true
+	permissions: {
+		can_trade: false
+		any_warp: true
+		disable_commands_when_dead: false
+		disable_pvm: true
+		disable_pvp: true
+	}
+},
+{
+	id: 30
+	name: "Event Manager"
+	inherit: ( "Support GM" )
+	level: 30
+	commands: {
+		/* Additional commands */
 		monster: true
-		monstersmall: true
-		monsterbig: true
 		killmonster2: true
 		cleanarea: true
 		cleanmap: true
-		item: [true, true]
-		zeny: [true, true]
+		item: true
+		zeny: true
 		disguise: [true, true]
 		undisguise: [true, true]
 		size: [true, true]
@@ -247,10 +230,10 @@ groups: (
 	}
 },
 {
-	id: 10
+	id: 60
 	name: "Law Enforcement"
-	inherit: ( )
-	level: 2
+	inherit: ( "Event Manager" )
+	level: 60
 	commands: {
 		hide: true
 		follow: true
@@ -271,6 +254,23 @@ groups: (
 		cartlist: true
 		itemlist: true
 		stats: true
+		/* Disabled commands */
+		monster: false
+		killmonster2: false
+		cleanarea: false
+		cleanmap: false
+		raise: false
+		raisemap: false
+		day: false
+		night: false
+		skillon: false
+		skilloff: false
+		pvpon: false
+		pvpoff: false
+		gvgon: false
+		gvgoff: false
+		marry: false
+		divorce: false
 	}
 	log_commands: true
 	permissions: {
@@ -281,6 +281,84 @@ groups: (
 		hack_info: true
 		any_warp: true
 		view_hpmeter: true
+		disable_pvm: true
+		disable_pvp: true
+	}
+},
+{
+	id: 80
+	name: "GM Chief"
+	inherit: ( "Law Enforcement" )
+	level: 80
+	commands: {
+		/* Enabled commands */
+		monster: true
+		killmonster2: true
+		cleanarea: true
+		cleanmap: true
+		raise: true
+		raisemap: true
+		day: true
+		night: true
+		skillon: true
+		skilloff: true
+		pvpon: true
+		pvpoff: true
+		gvgon: true
+		gvgoff: true
+		marry: true
+		divorce: true
+		jobchange: true
+		blvl: true
+		jlvl: true
+		allskill: true
+		refine: true
+		allstats: true
+		heal: true
+		itemreset: true
+		reset: true
+		killmonster: true
+		guild: true
+		partyrecall: true
+		guildrecall: true
+	}
+	log_commands: true
+	permissions: {
+		can_trade: false
+		any_warp: true
+		hide_session: false
+		who_display_aid: false
+		hack_info: false
+	}
+},
+{
+	id: 98
+	name: "Co Admin"
+	inherit: ( "GM Chief" )
+	level: 98
+	commands: {
+		reloaditemdb: true
+		reloadmobdb: true
+		reloadskilldb: true
+		reloadquestdb: true
+		snow: true
+		clouds: true
+		clouds2: true
+		fog: true
+		fireworks: true
+		sakura: true
+		leaves: true
+		clearweather: true
+		idsearch: true
+		accinfo: true
+	}
+	log_commands: true
+	permissions: {
+		can_trade: false
+		any_warp: true
+		hide_session: false
+		who_display_aid: false
+		hack_info: false
 	}
 },
 {
