--- a/db/cashshop_db.conf
+++ b/db/cashshop_db.conf
@@ -33,8 +33,21 @@ cash_shop: (
 	}
 	
 	cat_4: { //Permanent
-		Green_Herb:100
-		ID510:250
+		ID5800:3	//Blush of Groom
+		ID5474:5	//AFK Notice Board
+		ID5377:5	//Gentlemans Pipe Box
+		ID5325:5	//Robo Eyes
+		ID5401:5	//Black Frame Glasses
+		ID5288:5	//Red Glasses
+		ID5372:5	//Koneko Hat
+		ID18600:5	//Cat Ear Beret
+		ID18508:5	//Garuda Hat
+		ID5376:10	//Flying Evil Wing
+		ID18519:10	//Wing of Diablo [1]
+		ID18518:10	//Angel Wing Ears
+		ID2571:10	//Archangel Wings
+		ID18539:10	//Skull Cap
+		ID5374:10	//Evolve Magestic Goat
 	}
 	
 	cat_5: { //Scroll
@@ -48,8 +61,20 @@ cash_shop: (
 	}
 	
 	cat_7: { //Other
-		ID909:400
-		ID907:500
+		ID18539:10
+		ID14000:5
+		ID13997:5
+		ID14236:2
+		ID14237:2
+		ID14240:2
+		ID14241:2
+		ID14239:2
+		ID14187:2
+		ID13583:2
+		ID5374:10
+		ID5474:5
+		ID5377:5
+		ID5325:5
 	}
 }
 )
