--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -30,6 +30,7 @@ npc: npc/custom/admin/DailyReward.txt
 npc: npc/custom/admin/sqlquest.txt
 npc: npc/custom/admin/v4pshop.txt
 npc: npc/custom/admin/ladder.txt
+npc: npc/custom/admin/donation_girl.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
@@ -37,6 +38,7 @@ npc: npc/custom/admin/events/disguise.txt
 npc: npc/custom/admin/events/mushroom_event.txt
 npc: npc/custom/admin/events/diceevent.txt
 npc: npc/custom/admin/events/jumper.txt
+npc: npc/custom/admin/events/manager.txt
 
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
