Fixed Daily Rewards with compatibility with VIP System Donation Items included Automated Events Fully Customized including Event Manager and custom Shop Fixed Warp Portal in the refiner's area Added V4P shop items

--- a/db/cashshop_db.conf
+++ b/db/cashshop_db.conf
@@ -28,17 +28,26 @@ cash_shop: (
 		Banana_Juice:250
 	}
 	
-	cat_2: { //Limited
+	cat_2: { //Rental
 		Grape:100
 		ID533:250
 	}
 	
-	cat_3: { //Rental
+	cat_3: { //Limited
 		ID515:100
 		Carrot_Juice:250
 	}
 	
-	cat_4: { //Permanent
+	cat_4: { //Buff
+		ID12902:10	//Bubble Gum Box 10pcs
+		ID12900:8	//Battle Manual Box 10pcs
+		ID13582:5	//Convex Mirror Box 5pcs
+		ID12210:2	//Bubble Gum
+		ID12312:2	//Thick Battle Manual
+		ID12208:1	//Battle Manual
+	}
+	
+	cat_5: { //Hats
 		ID5800:3	//Blush of Groom
 		ID5474:5	//AFK Notice Board
 		ID5377:5	//Gentlemans Pipe Box
@@ -49,38 +58,52 @@ cash_shop: (
 		ID18600:5	//Cat Ear Beret
 		ID18508:5	//Garuda Hat
 		ID5376:10	//Flying Evil Wing
-		ID18519:10	//Wing of Diablo [1]
 		ID18518:10	//Angel Wing Ears
-		ID2571:10	//Archangel Wings
 		ID18539:10	//Skull Cap
-		ID5374:10	//Evolve Magestic Goat
+		ID5451:12	//RWC 2008 Dragon Helm Gold [1]
+		ID5257:12	//Soul Ring [0]
+		ID5375:15	//Orc Hero Headdress [1]
+		ID5226:15	//Mini Propeller
+		ID5137:15	//Alice Doll [1]
+		ID5801:15	//Ribbon of Bride
+		ID5379:18	//Tam [1]
+		ID5495:20	//Power of Thor
+		ID5374:22	//Evolve Magestic Goat
+		ID5518:25	//Large Baphomet Horns
+		ID5805:35	//Victorious Coronet
 	}
 	
-	cat_5: { //Scroll
-		ID501:100
-		ID502:250
-	}
-	
-	cat_6: { //Usable
-		White_Potion:150
-		Blue_Potion:500
+	cat_6: { //Gears
+		ID1228:20	// Combat Knife
+		ID13017:20	// Ice Pick [1]
+		ID13414:20	// Elemental Sword [3]
+		ID13412:20	// Twin Edge of Naght Sieger [3] Blue
+		ID13413:20	// Twin Edge of Naght Sieger [3] Red
+		ID1579:20	// Book of the Dead [2]
+		ID2349:15	//Aebecee's Raging Typhoon Armor
+		ID2351:15	//Claytos Cracking Earth Armor [1]
+		ID2345:15	//Lucius's Fierce Armor of Volcano [1]
+		ID2347:15	//Saphien's Armor of Ocean [1]
+		ID2127:10	//Secular Mission [0]
+		ID2136:8	//Cracked Buckler [0]
+		ID2126:8	//Guyak Shield [0]
+		ID2115:10	//Valkyrja's Shield [1]
+		ID2534:35	//Ruffler [0]
+		ID2554:30	//Nydhorgg's Shadow Garb [1]
+		ID2547:20	//Cheap Undershirt [0]
+		ID2533:20	//Freyja Cape
+		ID2537:15	//Diabolus Manteau [1]
+		ID2542:10	//Flame Manteau of Naght Sieger [1]
+		ID2524:10	//Valkyrian Manteau [1]
+		ID18519:10	//Wing of Diablo [1]
+		ID2571:10	//Archangel Wings
+		ID2428:20	//Freyja Boots
+		ID2433:20	//Diabolus Boots [1]
+		ID2421:20	//Valkyrian Shoes [1]
 	}
 	
 	cat_7: { //Other
-		ID18539:10
-		ID14000:5
-		ID13997:5
-		ID14236:2
-		ID14237:2
-		ID14240:2
-		ID14241:2
-		ID14239:2
-		ID14187:2
-		ID13583:2
-		ID5374:10
-		ID5474:5
-		ID5377:5
-		ID5325:5
+		Carrot_Juice:250
 	}
 }
 )
