--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -38,6 +38,9 @@ npc: npc/custom/admin/events/disguise.txt
 npc: npc/custom/admin/events/mushroom_event.txt
 npc: npc/custom/admin/events/diceevent.txt
 npc: npc/custom/admin/events/jumper.txt
+npc: npc/custom/admin/events/poringcatcher.txt
+npc: npc/custom/admin/events/poring_race.txt
+npc: npc/custom/admin/events/tboxsummon.txt
 npc: npc/custom/admin/events/manager.txt
 
 // ----------------------- Basic Scripts -----------------------
