Fixed random news Added battleignore to co admin Added broadcast to gms

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -222,11 +222,13 @@ groups: (
 		marry: true
 		divorce: true
 		refreshall: true
+		broadcast: true
 	}
 	log_commands: true
 	permissions: {
 		can_trade: false
 		any_warp: true
+		disable_commands_when_dead: false
 	}
 },
 {
@@ -351,6 +353,7 @@ groups: (
 		clearweather: true
 		idsearch: true
 		accinfo: true
+		battleignore: true
 	}
 	log_commands: true
 	permissions: {
