Monsterignore instead of battleignore

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -353,7 +353,7 @@ groups: (
 		clearweather: true
 		idsearch: true
 		accinfo: true
-		battleignore: true
+		monsterignore: true
 	}
 	log_commands: true
 	permissions: {
