Added @who and @who2

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -177,6 +177,8 @@ groups: (
 	level: 20
 	commands: {
 		/* Additional commands */
+		who: true
+		who2: true
 		item: true
 		zeny: true
 		refreshall: true
@@ -362,6 +364,7 @@ groups: (
 		hide_session: false
 		who_display_aid: false
 		hack_info: false
+		disable_pvm: false
 	}
 },
 {
