Added more feautures for gms

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -191,6 +191,8 @@ groups: (
 		disable_commands_when_dead: false
 		disable_pvm: true
 		disable_pvp: true
+		view_hpmeter: true
+		receive_requests: true
 	}
 },
 {
@@ -365,6 +367,7 @@ groups: (
 		who_display_aid: false
 		hack_info: false
 		disable_pvm: false
+		hchsys_admin: true
 	}
 },
 {
@@ -386,6 +389,7 @@ groups: (
 		use_changemaptype: true
 		all_commands: true
 		hchsys_admin: true
+		view_equipment: true
 	}
 }
 )
