Fixing GM Trade

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -280,6 +280,7 @@ groups: (
 	}
 	log_commands: true
 	permissions: {
+		can_trade: false
 		join_chat: true
 		kick_chat: true
 		hide_session: true
