Fixed GM Commands Fixed @nextlevel command Added leveling quests

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -173,10 +173,53 @@ groups: (
 {
 	id: 20
 	name: "Support GM"
-	inherit: ( "VIP Platinum" )
+	inherit: ( )
 	level: 20
 	commands: {
+		commands: true
+		help: true
+		rates: true
+		uptime: true
+		showdelay: true
+		exp: true
+		mobinfo: true
+		iteminfo: true
+		whodrops: true
+		time: true
+		jailtime: true
+		hominfo: true
+		homstats: true
+		showexp: true
+		showzeny: true
+		autotrade: true
+		/* feature commands */
+		refresh: true
+		noask: true
+		noks: true
+		autoloot: true
+		alootid: true
+		autotrade: true
+		request: true
+		channel: true
+		go: true
+		duel: true
+		invite: true
+		accept: true
+		reject: true
+		leave: true
+		whereis: true
+		storage: true
+		channel: true
+		join: true
+		load: true
+		feelreset: true
 		/* Additional commands */
+		font: true
+		pettalk: true
+		homtalk: true
+		petrename: true
+		where: true
+		me: true
 		who: true
 		who2: true
 		item: true
@@ -230,9 +273,6 @@ groups: (
 	}
 	log_commands: true
 	permissions: {
-		can_trade: false
-		any_warp: true
-		disable_commands_when_dead: false
 	}
 },
 {
@@ -280,16 +320,12 @@ groups: (
 	}
 	log_commands: true
 	permissions: {
-		can_trade: false
 		join_chat: true
 		kick_chat: true
 		hide_session: true
 		who_display_aid: true
 		hack_info: true
-		any_warp: true
 		view_hpmeter: true
-		disable_pvm: true
-		disable_pvp: true
 	}
 },
 {
@@ -331,11 +367,6 @@ groups: (
 	}
 	log_commands: true
 	permissions: {
-		can_trade: false
-		any_warp: true
-		hide_session: false
-		who_display_aid: false
-		hack_info: false
 	}
 },
 {
@@ -362,13 +393,6 @@ groups: (
 	}
 	log_commands: true
 	permissions: {
-		can_trade: false
-		any_warp: true
-		hide_session: false
-		who_display_aid: false
-		hack_info: false
-		disable_pvm: false
-		hchsys_admin: true
 	}
 },
 {
