Added Support System Fixed Green Apple Ring and Light ASPD Potions

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -43,6 +43,10 @@ npc: npc/custom/admin/events/poring_race.txt
 npc: npc/custom/admin/events/tboxsummon.txt
 npc: npc/custom/admin/events/manager.txt
 
+// ----------------------- Support System Scripts -----------------------
+npc: npc/custom/admin/support/ticket_notification.txt
+npc: npc/custom/admin/support/ticket_notification2.txt
+
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
 //npc: npc/custom/jobmaster.txt
