--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -82,6 +82,7 @@ groups: (
 	inherit: ( /*empty list*/ )
 	commands: {
 		/* no commands by default */
+		warp: true
 		commands: true
 		help: true
 		rates: true
@@ -415,6 +416,7 @@ groups: (
 		all_commands: true
 		hchsys_admin: true
 		view_equipment: true
+		any_warp: true
 	}
 }
 )
