--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -42,6 +42,7 @@ npc: npc/custom/admin/events/poringcatcher.txt
 npc: npc/custom/admin/events/poring_race.txt
 npc: npc/custom/admin/events/tboxsummon.txt
 npc: npc/custom/admin/events/manager.txt
+//npc: npc/custom/admin/events/euphy_manager.txt
 
 // ----------------------- Support System Scripts -----------------------
 npc: npc/custom/admin/support/ticket_notification.txt
