Added @who3 and view equipment to co admins

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -390,9 +390,11 @@ groups: (
 		idsearch: true
 		accinfo: true
 		monsterignore: true
+		who3: true
 	}
 	log_commands: true
 	permissions: {
+		view_equipment: true
 	}
 },
 {
