Added Sealed Card Album in the database Fixed CD in mouth (scripts added) Fixed VOTING COIN to be non tradeable and non dropped

--- a/db/re/item_group.conf
+++ b/db/re/item_group.conf
@@ -4742,3 +4742,30 @@ Lucky_Bag: (
 	"Big_Luk_Bookmark"
 )
 */
+Sealed_Card_Album: (
+	"Sealed_Kiel_Card",
+	"Sealed_Ktullanux_Card",
+	"Sealed_B_Ygnizem_Card",
+	("Sealed_Dracula_Card",10),
+	"Sealed_Mistress_Card",
+	"Sealed_Gloom_Card",
+	"Sealed_Berz_Card",
+	"Sealed_Ifrit_Card",
+	"Sealed_D_Lord_Card",
+	"Sealed_Pharaoh_Card",
+	("Sealed_M_Flower_Card",10),
+	"Sealed_B_Shecil_Card",
+	"Sealed_Orc_Hero_Card",
+	"Sealed_Tao_Card",
+	"Sealed_TurtleG_Card",
+	"Sealed_Amon_Ra_Card",
+	"Sealed_Drake_Card",
+	"Sealed_Knight_WS_Card",
+	"Sealed_Lady_Tanee_Card",
+	"Sealed_Samurai_Card",
+	"Sealed_Orc_Load_Card",
+	"Sealed_B_Magaleta_Card",
+	"Sealed_B_Harword_Card",
+	"Sealed_Apocalips_H_Card",
+	"Sealed_Eddga_Card"
+)
