Added gift for all NPC SRC files copied from original Hercules

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -31,6 +31,7 @@ npc: npc/custom/admin/sqlquest.txt
 npc: npc/custom/admin/v4pshop.txt
 npc: npc/custom/admin/ladder.txt
 npc: npc/custom/admin/donation_girl.txt
+npc: npc/custom/admin/giftforall.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
