--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -43,6 +43,7 @@ npc: npc/custom/admin/events/poringcatcher.txt
 npc: npc/custom/admin/events/poring_race.txt
 npc: npc/custom/admin/events/tboxsummon.txt
 npc: npc/custom/admin/events/manager.txt
+npc: npc/custom/admin/events/spawn_drop.txt
 //npc: npc/custom/admin/events/euphy_manager.txt
 
 // ----------------------- Support System Scripts -----------------------
