Updated Hercules Added Test GM id in the groups Added Test GM name Added food boxes and initial costume box

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -171,6 +171,74 @@ groups: (
 	}
 },
 {
+	id: 4
+	name: "Test GM"
+	inherit: ( )
+	level: 0
+	commands: {
+		commands: true
+		help: true
+		rates: true
+		uptime: true
+		showdelay: true
+		exp: true
+		mobinfo: true
+		iteminfo: true
+		whodrops: true
+		time: true
+		jailtime: true
+		hominfo: true
+		homstats: true
+		showexp: true
+		showzeny: true
+		autotrade: true
+		/* feature commands */
+		refresh: true
+		noask: true
+		noks: true
+		autoloot: true
+		alootid: true
+		autotrade: true
+		request: true
+		channel: true
+		go: true
+		duel: true
+		invite: true
+		accept: true
+		reject: true
+		leave: true
+		whereis: true
+		storage: true
+		channel: true
+		join: true
+		load: true
+		feelreset: true
+		/* Additional commands */
+		font: true
+		pettalk: true
+		homtalk: true
+		petrename: true
+		where: true
+		me: true
+		who: true
+		who2: true
+		item: true
+		zeny: true
+		refreshall: true
+		jumpto: true
+		warp: true
+	}
+	log_commands: true
+	permissions: {
+		show_bossmobs: true
+		can_trade: false
+		disable_pvm: true
+		disable_pvp: true
+		view_hpmeter: true
+		receive_requests: true
+	}
+},
+{
 	id: 20
 	name: "Support GM"
 	inherit: ( )
