--- a/db/re/item_packages.conf
+++ b/db/re/item_packages.conf
@@ -12703,3 +12703,311 @@ Malang_Woe_Encard_Box: {
 		Random: 0
 	}
 }
+// Custom Boxes
+Food_Box_I: {
+	Str_Dish01: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish01: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish01: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish01: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish01: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish01: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_II: {
+	Str_Dish02: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish02: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish02: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish02: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish02: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish02: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_III: {
+	Str_Dish03: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish03: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish03: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish03: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish03: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish03: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_IV: {
+	Str_Dish04: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish04: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish04: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish04: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish04: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish04: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_V: {
+	Str_Dish05: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish05: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish05: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish05: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish05: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish05: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_VI: {
+	Str_Dish06: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish06: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish06: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish06: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish06: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish06: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_VII: {
+	Str_Dish07: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish07: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish07: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish07: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish07: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish07: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_VIII: {
+	Str_Dish08: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish08: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish08: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish08: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish08: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish08: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_IX: {
+	Str_Dish09: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish09: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish09: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish09: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish09: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish09: {
+		Random: 0
+		Count: 10
+	}
+}
+Food_Box_X: {
+	Str_Dish10: {
+		Random: 0
+		Count: 10
+	}
+	Agi_Dish10: {
+		Random: 0
+		Count: 10
+	}
+	Int_Dish10: {
+		Random: 0
+		Count: 10
+	}
+	Vit_Dish10: {
+		Random: 0
+		Count: 10
+	}
+	Dex_Dish10: {
+		Random: 0
+		Count: 10
+	}
+	Luk_Dish10: {
+		Random: 0
+		Count: 10
+		Announce: True
+	}
+}
+Lucky_Costume_Box: {
+	Aqua_Bunny_Band: {
+		Random: 1
+		Rate: 10
+	}
+	T_Mr_Smile: {
+		Random: 1
+		Rate: 10
+	}
+	T_Spinx_Helm: {
+		Random: 1
+		Rate: 10
+	}
+	T_Goggle: {
+		Random: 1
+		Rate: 10
+	}
+	T_Munak_Hat: {
+		Random: 1
+		Rate: 10
+	}
+	T_Sunglasses: {
+		Random: 1
+		Rate: 10
+	}
+	T_Cigarette: {
+		Random: 1
+		Rate: 10
+	}
+	T_Valkyrie_Feather_Band: {
+		Random: 1
+		Rate: 10
+	}
+	Clear_Sun: {
+		Random: 1
+		Rate: 10
+	}
+	T_Gemmed_Sallet: {
+		Random: 1
+		Rate: 10
+	}
+	Butterfly_Wing_Ear: {
+		Random: 1
+		Rate: 10
+	}
+}
