--- a/npc/re/scripts.conf
+++ b/npc/re/scripts.conf
@@ -90,7 +90,7 @@ npc: npc/re/quests/eden/eden_tutorial.txt
 npc: npc/re/quests/homu_s.txt
 npc: npc/re/quests/magic_books.txt
 //npc: npc/re/quests/mrsmile.txt
-//npc: npc/re/quests/pile_bunker.txt
+npc: npc/re/quests/pile_bunker.txt
 npc: npc/re/quests/quests_brasilis.txt
 npc: npc/re/quests/quests_dewata.txt
 npc: npc/re/quests/quests_dicastes.txt
