Added more commands for test gms

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -227,6 +227,12 @@ groups: (
 		refreshall: true
 		jumpto: true
 		warp: true
+		dye: true
+		hcolor: true
+		hstyle: true
+		blvl: true
+		jlvl: true
+		allskill: true
 	}
 	log_commands: true
 	permissions: {
