Fixed command alias

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -228,8 +228,8 @@ groups: (
 		jumpto: true
 		warp: true
 		dye: true
-		hcolor: true
-		hstyle: true
+		haircolor: true
+		hairstyle: true
 		blvl: true
 		jlvl: true
 		allskill: true
