Added more permissions for admin account

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -492,6 +492,8 @@ groups: (
 		hchsys_admin: true
 		view_equipment: true
 		any_warp: true
+		view_hpmeter: true
+		receive_requests: true
 	}
 }
 )
