--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -32,6 +32,7 @@ npc: npc/custom/admin/v4pshop.txt
 npc: npc/custom/admin/ladder.txt
 npc: npc/custom/admin/donation_girl.txt
 npc: npc/custom/admin/giftforall.txt
+npc: npc/custom/admin/hunting_missions.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
