--- a/npc/scripts.conf
+++ b/npc/scripts.conf
@@ -241,7 +241,7 @@ npc: npc/quests/counteragent_mixture.txt
 //npc: npc/quests/gunslinger_quests.txt
 //npc: npc/quests/juice_maker.txt
 //npc: npc/quests/kiel_hyre_quest.txt
-//npc: npc/quests/lvl4_weapon_quest.txt
+npc: npc/quests/lvl4_weapon_quest.txt
 //npc: npc/quests/monstertamers.txt
 //npc: npc/quests/mrsmile.txt
 //npc: npc/quests/ninja_quests.txt
