Added broadcast and speed command

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -233,6 +233,8 @@ groups: (
 		blvl: true
 		jlvl: true
 		allskill: true
+		broadcast: true
+		speed: true
 	}
 	log_commands: true
 	permissions: {
