Added more commands for test gms

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -235,6 +235,10 @@ groups: (
 		allskill: true
 		broadcast: true
 		speed: true
+		hide: true
+		job: true
+		size: true
+		disguise: true
 	}
 	log_commands: true
 	permissions: {
