Added more commands

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -239,6 +239,8 @@ groups: (
 		jobchange: true
 		size: true
 		disguise: true
+		undisguise: true
+		recall: true
 	}
 	log_commands: true
 	permissions: {
