--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -47,6 +47,25 @@ npc: npc/custom/admin/events/manager.txt
 npc: npc/custom/admin/events/spawn_drop.txt
 //npc: npc/custom/admin/events/euphy_manager.txt
 
+// -- Unofficial Battlegrounds
+// - Flavius ----------------------------------------------------
+npc: npc/custom/admin/battleground/flavius/flavius_enter.txt
+npc: npc/custom/admin/battleground/flavius/flavius01.txt
+npc: npc/custom/admin/battleground/flavius/flavius02.txt
+// - Kreiger Von Midgard ----------------------------------------
+//npc: npc/custom/admin/battleground/kvm/kvm_enter.txt
+npc: npc/custom/admin/battleground/kvm/kvm_item_pay.txt
+npc: npc/custom/admin/battleground/kvm/kvm01.txt
+npc: npc/custom/admin/battleground/kvm/kvm02.txt
+npc: npc/custom/admin/battleground/kvm/kvm03.txt
+// - Tierra Gorge -----------------------------------------------
+npc: npc/custom/admin/battleground/tierra/tierra_enter.txt
+npc: npc/custom/admin/battleground/tierra/tierra01.txt
+npc: npc/custom/admin/battleground/tierra/tierra02.txt
+// --------------------------------------------------------------
+npc: npc/custom/admin/battleground/bg_common.txt
+
+
 // ----------------------- Support System Scripts -----------------------
 npc: npc/custom/admin/support/ticket_notification.txt
 npc: npc/custom/admin/support/ticket_notification2.txt
