Disabled MVP Cards for WOE

--- a/db/re/map_zone_db.conf
+++ b/db/re/map_zone_db.conf
@@ -145,9 +145,56 @@ zones: (
 		Assumptio_5_Scroll: true
 		Greed_Scroll: true
 		Pty_Assumptio_Scroll: true
-		//ID30004: true	// Premium Fly Wing
-		//ID30005: true	// Premium Fish Slice
-		//ID30008: true	// Premium Green Potion
+		ID30004: true	// Premium Fly Wing
+		ID30005: true	// Premium Fish Slice
+		ID30008: true	// Premium Green Potion
+		ID4236: true	// Amon Ra Card
+		ID4359: true	// Assassin Cross Card
+		ID4425: true	// Atroce Card
+		ID4372: true	// Bacsojin Card
+		ID4147: true	// Baphomet Card
+		ID4145: true	// Berzebub Card
+		ID4168: true	// Dark Lord Card
+		ID4386: true	// Detale Card
+		ID4142: true	// Doppelganger Card
+		ID4134: true	// Dracula Card
+		ID4137: true	// Drake Card
+		ID4123: true	// Eddga Card
+		ID4330: true	// Evil Snake Lord Card
+		ID4441: true	// FBH Card
+		ID4324: true	// Garm Card
+		ID4408: true	// Gloom Card
+		ID4509: true	// Gold Queen Scaraba Card
+		ID4128: true	// GTB Card
+		ID4365: true	// High Wizard Card
+		ID4363: true	// High Priest Card
+		ID4430: true	// Ifrit Card
+		ID4263: true	// Incantation Samurai Card
+		ID4403: true	// Kiel Card
+		ID4318: true	// Stormy Knight Card
+		ID4525: true	// Kraken Card
+		ID4376: true	// Lady Tanee Card
+		ID4520: true	// Leak Card
+		ID4357: true	// Lord Knight Card
+		ID4276: true	// Lord of the Dead Card
+		ID4146: true	// Maya Card
+		ID4361: true	// MasterSmith Card
+		ID4132: true	// Mistress Card
+		ID4131: true	// Moonlight Flower Card
+		ID4456: true	// Nidhoggur Shadow Card
+		ID4143: true	// Orc Hero Card
+		ID4135: true	// Orc Lord Card
+		ID4144: true	// Osiris Card
+		ID4148: true	// Pharaoh Card
+		ID4121: true	// Phreeoni Card
+		ID4507: true	// Queen Scaraba Card
+		ID4342: true	// RSX Card
+		ID4367: true	// Sniper Card
+		ID4302: true	// Tao Gunka Card
+		ID4399: true	// Thanatos Card
+		ID4305: true	// Turtle General Card
+		ID4407: true	// Randgris Card
+		ID4374: true	// Vesper Card
 	}
 	/* 5 second duration increase on GvG */
 	/* knockback disabled */
