Fixed Item Scripts for (Evil Marching Hat, Lucky Hat) Added guild commands (@gstorage, @changegm, @breakguild)

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -119,6 +119,9 @@ groups: (
 		join: true
 		load: true
 		feelreset: true
+		changegm: true
+		breakguild: true
+		guildstorage: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
