--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -47,6 +47,7 @@ npc: npc/custom/admin/events/tboxsummon.txt
 npc: npc/custom/admin/events/manager.txt
 npc: npc/custom/admin/events/spawn_drop.txt
 npc: npc/custom/admin/events/maze.txt
+npc: npc/custom/admin/events/zombieinvasion.txt
 //npc: npc/custom/admin/events/euphy_manager.txt
 
 // -- Unofficial Battlegrounds
