Updated Hercules Disabled Scavenger NPC

--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -33,7 +33,7 @@ npc: npc/custom/admin/ladder.txt
 npc: npc/custom/admin/donation_girl.txt
 npc: npc/custom/admin/giftforall.txt
 npc: npc/custom/admin/hunting_missions.txt
-npc: npc/custom/admin/scavenger.txt
+//npc: npc/custom/admin/scavenger.txt
 
 // ----------------------- Event Scripts -----------------------
 npc: npc/custom/admin/events/cluckers.txt
