--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -27,7 +27,7 @@ npc: npc/custom/admin/vip.txt
 npc: npc/custom/admin/gmname.txt
 npc: npc/custom/admin/gmlogin.txt
 npc: npc/custom/admin/DailyReward.txt
-npc: npc/custom/admin/sqlquest.txt
+//npc: npc/custom/admin/sqlquest.txt
 npc: npc/custom/admin/v4pshop.txt
 npc: npc/custom/admin/ladder.txt
 npc: npc/custom/admin/donation_girl.txt
