--- a/npc/re/scripts.conf
+++ b/npc/re/scripts.conf
@@ -18,33 +18,33 @@ npc: npc/re/cities/malaya.txt
 npc: npc/re/cities/mora.txt
 
 // --------------------------- Guides ---------------------------
-npc: npc/re/guides/guides_alberta.txt
-npc: npc/re/guides/guides_aldebaran.txt
-npc: npc/re/guides/guides_amatsu.txt
-npc: npc/re/guides/guides_ayothaya.txt
-npc: npc/re/guides/guides_brasilis.txt
-npc: npc/re/guides/guides_comodo.txt
-npc: npc/re/guides/guides_dewata.txt
-npc: npc/re/guides/guides_dicastes.txt
-npc: npc/re/guides/guides_eclage.txt
-npc: npc/re/guides/guides_einbroch.txt
-npc: npc/re/guides/guides_geffen.txt
-npc: npc/re/guides/guides_gonryun.txt
-npc: npc/re/guides/guides_hugel.txt
-npc: npc/re/guides/guides_izlude.txt
-npc: npc/re/guides/guides_juno.txt
-npc: npc/re/guides/guides_lighthalzen.txt
-npc: npc/re/guides/guides_louyang.txt
-npc: npc/re/guides/guides_lutie.txt
-npc: npc/re/guides/guides_mora.txt
-npc: npc/re/guides/guides_morroc.txt
-npc: npc/re/guides/guides_moscovia.txt
-npc: npc/re/guides/guides_niflheim.txt
-npc: npc/re/guides/guides_payon.txt
-npc: npc/re/guides/guides_prontera.txt
-npc: npc/re/guides/guides_rachel.txt
-npc: npc/re/guides/guides_umbala.txt
-npc: npc/re/guides/guides_veins.txt
+//npc: npc/re/guides/guides_alberta.txt
+//npc: npc/re/guides/guides_aldebaran.txt
+//npc: npc/re/guides/guides_amatsu.txt
+//npc: npc/re/guides/guides_ayothaya.txt
+//npc: npc/re/guides/guides_brasilis.txt
+//npc: npc/re/guides/guides_comodo.txt
+//npc: npc/re/guides/guides_dewata.txt
+//npc: npc/re/guides/guides_dicastes.txt
+//npc: npc/re/guides/guides_eclage.txt
+//npc: npc/re/guides/guides_einbroch.txt
+//npc: npc/re/guides/guides_geffen.txt
+//npc: npc/re/guides/guides_gonryun.txt
+//npc: npc/re/guides/guides_hugel.txt
+//npc: npc/re/guides/guides_izlude.txt
+//npc: npc/re/guides/guides_juno.txt
+//npc: npc/re/guides/guides_lighthalzen.txt
+//npc: npc/re/guides/guides_louyang.txt
+//npc: npc/re/guides/guides_lutie.txt
+//npc: npc/re/guides/guides_mora.txt
+//npc: npc/re/guides/guides_morroc.txt
+//npc: npc/re/guides/guides_moscovia.txt
+//npc: npc/re/guides/guides_niflheim.txt
+//npc: npc/re/guides/guides_payon.txt
+//npc: npc/re/guides/guides_prontera.txt
+//npc: npc/re/guides/guides_rachel.txt
+//npc: npc/re/guides/guides_umbala.txt
+//npc: npc/re/guides/guides_veins.txt
 
 // ------------------------ Instances ---------------------------
 npc: npc/re/instances/HazyForest.txt
@@ -57,14 +57,14 @@ npc: npc/re/kafras/kafras.txt
 // -------------------------- Merchant --------------------------
 npc: npc/re/merchants/3rd_trader.txt
 npc: npc/re/merchants/catalog.txt
-npc: npc/re/merchants/blessed_refiner.txt
+//npc: npc/re/merchants/blessed_refiner.txt
 npc: npc/re/merchants/diamond.txt
 npc: npc/re/merchants/flute.txt
-npc: npc/re/merchants/hd_refiner.txt
-npc: npc/re/merchants/inn.txt
+//npc: npc/re/merchants/hd_refiner.txt
+//npc: npc/re/merchants/inn.txt
 npc: npc/re/merchants/quivers.txt
 npc: npc/re/merchants/refine.txt
-npc: npc/re/merchants/renters.txt
+//npc: npc/re/merchants/renters.txt
 npc: npc/re/merchants/shops.txt
 npc: npc/re/merchants/ticket_refiner.txt
 npc: npc/re/merchants/enchan_mal.txt
@@ -76,17 +76,17 @@ npc: npc/re/other/mercenary_rent.txt
 
 // --------------------------- Quests ---------------------------
 // - Eden Group -------------------------------------------------
-npc: npc/re/quests/eden/11-25.txt
-npc: npc/re/quests/eden/26-40.txt
-npc: npc/re/quests/eden/41-55.txt
-npc: npc/re/quests/eden/56-70.txt
-npc: npc/re/quests/eden/71-85.txt
-npc: npc/re/quests/eden/86-90.txt
-npc: npc/re/quests/eden/91-99.txt
-npc: npc/re/quests/eden/eden_common.txt
-npc: npc/re/quests/eden/eden_quests.txt
-npc: npc/re/quests/eden/eden_service.txt
-npc: npc/re/quests/eden/eden_tutorial.txt
+//npc: npc/re/quests/eden/11-25.txt
+//npc: npc/re/quests/eden/26-40.txt
+//npc: npc/re/quests/eden/41-55.txt
+//npc: npc/re/quests/eden/56-70.txt
+//npc: npc/re/quests/eden/71-85.txt
+//npc: npc/re/quests/eden/86-90.txt
+//npc: npc/re/quests/eden/91-99.txt
+//npc: npc/re/quests/eden/eden_common.txt
+//npc: npc/re/quests/eden/eden_quests.txt
+//npc: npc/re/quests/eden/eden_service.txt
+//npc: npc/re/quests/eden/eden_tutorial.txt
 // --------------------------------------------------------------
 //npc: npc/re/quests/cupet.txt
 npc: npc/re/quests/homun_s.txt
@@ -103,5 +103,5 @@ npc: npc/re/quests/quests_malangdo.txt
 npc: npc/re/quests/quests_veins.txt
 npc: npc/re/quests/quests_mora.txt
 npc: npc/re/quests/quests_morocc.txt
-npc: npc/re/quests/monstertamers.txt
+//npc: npc/re/quests/monstertamers.txt
 npc: npc/re/quests/quests_13_1.txt
