--- a/npc/re/scripts.conf
+++ b/npc/re/scripts.conf
@@ -91,7 +91,7 @@ npc: npc/re/other/mercenary_rent.txt
 //npc: npc/re/quests/cupet.txt
 npc: npc/re/quests/homun_s.txt
 npc: npc/re/quests/magic_books.txt
-npc: npc/re/quests/mrsmile.txt
+//npc: npc/re/quests/mrsmile.txt
 npc: npc/re/quests/pile_bunker.txt
 npc: npc/re/quests/quests_brasilis.txt
 npc: npc/re/quests/quests_dewata.txt
