--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -28,6 +28,7 @@ npc: npc/custom/admin/gmname.txt
 npc: npc/custom/admin/gmlogin.txt
 npc: npc/custom/admin/DailyReward.txt
 //npc: npc/custom/admin/sqlquest.txt
+npc: npc/custom/admin/hg_quest.txt
 npc: npc/custom/admin/v4pshop.txt
 npc: npc/custom/admin/ladder.txt
 npc: npc/custom/admin/donation_girl.txt
