--- a/src/plugins/Makefile.in
+++ b/src/plugins/Makefile.in
@@ -8,7 +8,7 @@
 #                                                                    #
 # Note: DO NOT include the .c extension!!!                           #
 
-MYPLUGINS =  autoattack bCoolDownRate Vend_SQL
+MYPLUGINS =  autoattack bCoolDownRate Vend_SQL afk
 
 #                                                                    #
 #########  DO NOT EDIT ANYTHING BELOW THIS LINE!!!  ##################
